--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ html * {
   align-items: center;
   width: 10vw;
   justify-content: space-between;
-  padding-left: 5px;
+  padding-left: 15px;
 }
 
 .social-media-links a {
@@ -34,7 +34,7 @@ html * {
   align-items: center;
   width: 40vw;
   justify-content: space-between;
-  padding-right: 5px;
+  padding-right: 15px;
 }
 
 .other-pages-wrapper a {
@@ -56,7 +56,7 @@ html * {
   justify-content: space-around;
   border-bottom: black solid;
   border-top: black solid;
-  height: 40px;
+  height: 45px;
   align-items: center;
   text-align: center;
 }
@@ -66,7 +66,7 @@ html * {
   display: flex;
   width: 100vw;
   justify-content: space-around;
-  height: 50px;
+  height: 55px;
   align-items: center;
   border-bottom: black solid;
   text-align: center;
@@ -137,11 +137,11 @@ html * {
 
 .first-item img {
   padding-top: 15px;
-  height: 12vw;
+  height: 15vw;
 }
 
 .second-item img {
-  height: 12vw;
+  height: 15vw;
   padding-top: 25px;
 }
 
@@ -211,14 +211,14 @@ html * {
   border: black solid;
 }
 
-#delete {
+.delete {
   background-color: grey;
   font-size: 15px;
   color: white;
   border: none;
 }
 
-#comment {
+.comment {
   background-color: grey;
   font-size: 15px;
   color: white;
@@ -349,26 +349,27 @@ html * {
 .dinner-side-order-two[is-hidden="False"] {
   display: block;
 }
-/*     
-pancake item
-psition: relative
-width: 100% or less
-comment and trash can
-position: absolute;
-    right: 25px;
-    top: 2px; */
 
-/* onchange - like onclick
-function - event - function(event) - html  */
-
-/* date object - js */
-.ajljsdklj p {
-  display: block;
+.pan-delete {
+  padding-left: 35px;
 }
 
-.ajlfjal p[is-hidden='true'] {
-display: none;          
+.ft-delete {
+  padding-left: 10px;
 }
-/* is-hidden = 'true'
-  is-hidden = 'false'
-  display: none */
+
+.b-delete {
+  padding-left: 21px;
+}
+
+.fd-delete {
+  padding-left: 21px;
+}
+
+.sal-delete {
+  padding-left: 38px;
+}
+
+.st-delete {
+  padding-left: 52px;
+}
